--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,29 @@ p {
     padding: 3% 2%;
 }
 
+/* CTA section */
+
+#cta{
+    background-color: #ff4c68;
+    color: #fff;
+    padding: 7% 15%;
+    text-align: center;
+}
+
+.cta-heading{
+    font-family: "Montserrat-Black", sans-serif;
+    font-weight: 900 !important;
+    font-size: 3.5rem !important;
+    line-height: 1.5;
+}
+
+/* Footer section */
+
+#footer{
+    padding: 7% 15%;
+    text-align: center;
+}
+
 /* 1028 */
 @media (max-width: 991px) {
     #title {
