--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,28 @@
 body {
     font-family: "Montserrat", sans-serif;
+    text-align: center;
 }
 
-h1 {
-    font-family: 'Montserrat-Black', sans-serif !important;
-    font-size: 5rem;
-    line-height: 1.5;
-    font-weight: 900 !important;
-}
-
-h3 {
-    font-family: "Montserrat-bold";
-    font-weight: 900 !important;
-
-}
-
-h2 {
+h1, h2, h3, h4, h5, h6 {
     font-family: "Montserrat-Black", sans-serif;
     font-weight: 900 !important;
-    font-size: 3rem !important;
-    line-height: 1.5;
 }
 
 p {
     color: #8f8f8f;
+}
+
+/* Heading */
+
+.big-heading{
+    font-size: calc(1.375rem + 1.5vw) !important;
+    line-height: 1.5 !important;
+    font-weight: 900 !important;
+}
+
+.setcion-heading{
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
 #title {
@@ -82,6 +81,10 @@ p {
     position: relative;
 }
 
+.feature-title{
+    font-size: 1.5rem;
+}
+
 .feature-box {
     text-align: center;
     padding: 5% !important;
@@ -104,6 +107,11 @@ p {
     background-color: #ef8172;
     color: white;
 
+}
+
+.testimonial-text{
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
 .testimonial-image {
@@ -134,6 +142,11 @@ p {
     text-align: center;
 }
 
+.price-text{
+    font-size: 2.5rem;
+    line-height: 1.5;
+}
+
 .pricing-column {
     padding: 3% 2%;
 }
@@ -147,12 +160,6 @@ p {
     text-align: center;
 }
 
-.cta-heading{
-    font-family: "Montserrat-Black", sans-serif;
-    font-weight: 900 !important;
-    font-size: 3.5rem !important;
-    line-height: 1.5;
-}
 
 /* Footer section */
 
